[gd_scene load_steps=16 format=2]

[ext_resource path="res://scene/main/InitWorld.gd" type="Script" id=1]
[ext_resource path="res://resource/FiraCode-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scene/main/PCMove.gd" type="Script" id=3]
[ext_resource path="res://scene/main/MainScene.gd" type="Script" id=4]
[ext_resource path="res://scene/main/Schedule.gd" type="Script" id=5]
[ext_resource path="res://scene/main/EnemyAI.gd" type="Script" id=6]
[ext_resource path="res://scene/main/DungeonBoard.gd" type="Script" id=7]
[ext_resource path="res://scene/main/SideBarBox.gd" type="Script" id=8]
[ext_resource path="res://scene/main/Modeline.gd" type="Script" id=9]
[ext_resource path="res://scene/main/PCAttack.gd" type="Script" id=10]
[ext_resource path="res://scene/main/RemoveObject.gd" type="Script" id=11]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://resource/FiraCode-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 2 )

[node name="MainScene" type="Node2D"]
script = ExtResource( 4 )

[node name="InitWorld" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="PCMove" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="PCAttack" type="Node2D" parent="PCMove"]
script = ExtResource( 10 )

[node name="Schedule" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="EnemyAI" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="DungeonBoard" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="RemoveObject" type="Node2D" parent="."]
script = ExtResource( 11 )

[node name="MainGUI" type="MarginContainer" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 780.0
margin_bottom = 580.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Modeline" type="Label" parent="MainGUI"]
margin_top = 534.0
margin_right = 760.0
margin_bottom = 560.0
size_flags_horizontal = 3
size_flags_vertical = 8
custom_fonts/font = SubResource( 2 )
text = "Modeline"
script = ExtResource( 9 )

[node name="SideBarBox" type="VBoxContainer" parent="MainGUI"]
margin_right = 760.0
margin_bottom = 560.0
rect_min_size = Vector2( 180, 0 )
script = ExtResource( 8 )

[node name="Turn" type="Label" parent="MainGUI/SideBarBox"]
margin_left = 676.0
margin_right = 760.0
margin_bottom = 278.0
size_flags_horizontal = 8
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "Turn 14"

[node name="Help" type="Label" parent="MainGUI/SideBarBox"]
margin_left = 712.0
margin_top = 534.0
margin_right = 760.0
margin_bottom = 560.0
size_flags_horizontal = 8
size_flags_vertical = 10
custom_fonts/font = SubResource( 4 )
text = "Help"
